feat: device firmware upgrade via the app itself
